--- a/assets/scss/home-user.scss
+++ b/assets/scss/home-user.scss
@@ -1437,6 +1437,7 @@ body {
   }
 
   .favorite-artists {
+    overflow: hidden;
     .section-title {
       max-width: 45rem;
     }
